Support JDK 8, 11, 17