@@ -27,7 +27,8 @@
 
         <nexus-staging-maven-plugin.phase>deploy</nexus-staging-maven-plugin.phase>
 
-        <lombok.version>1.18.12</lombok.version>
+        <lombok.version>1.18.20</lombok.version>
+        <lombok-mapstruct-binding.version>0.2.0</lombok-mapstruct-binding.version>
         <!--please note that for production safety reasons only test scope or test modules usage is allowed
         (no back compatibility, project guava version can vary or be upgraded)-->
         <guava.version>18.0</guava.version>
@@ -45,14 +46,14 @@
         <slf4j.version>1.7.25</slf4j.version>
         <!-- This is the latest version that's compatible with Spring Core 4.1.1.RELEASE -->
         <spring-security.version>4.0.4.RELEASE</spring-security.version>
-        <mapstruct.version>1.2.0.Final</mapstruct.version>
+        <mapstruct.version>1.5.3.Final</mapstruct.version>
         <jackson.version>2.7.9</jackson.version>
         <validation-api.version>1.1.0.Final</validation-api.version>
         <javax-persistence.version>2.2</javax-persistence.version>
         <javax.servlet-api.version>3.1.0</javax.servlet-api.version>
         <findbugs.version>3.0.0</findbugs.version>
         <jetbrains-annotations.version>20.1.0</jetbrains-annotations.version>
-        <junit.version>4.12</junit.version>
+        <junit.version>4.13.1</junit.version>
         <hamcrest.version>1.3</hamcrest.version>
         <javassist.version>3.24.0-GA</javassist.version>
         <openpojo.version>0.9.1</openpojo.version>
@@ -65,6 +66,9 @@
         <surefire.runOrder>alphabetical</surefire.runOrder>
         <failsafe.runOrder>alphabetical</failsafe.runOrder>
         <maven.javadoc.skip>true</maven.javadoc.skip>
+        <!-- Note: overriden for JDK 8 via profile -->
+        <argLine.addOpens>--add-opens java.base/java.lang=ALL-UNNAMED
+            --add-opens java.base/java.time=ALL-UNNAMED</argLine.addOpens>
     </properties>
 
     <dependencyManagement>
@@ -92,7 +96,7 @@
 
             <dependency>
                 <groupId>org.mapstruct</groupId>
-                <artifactId>mapstruct-jdk8</artifactId>
+                <artifactId>mapstruct</artifactId>
                 <version>${mapstruct.version}</version>
             </dependency>
 
@@ -268,11 +272,50 @@
         </dependencies>
     </dependencyManagement>
 
+    <profiles>
+        <profile>
+            <id>jdk8</id>
+            <activation>
+                <jdk>1.8</jdk>
+            </activation>
+            <properties>
+                <argLine.addOpens/>
+            </properties>
+        </profile>
+    </profiles>
+
     <build>
         <plugins>
             <plugin>
                 <artifactId>maven-compiler-plugin</artifactId>
-                <version>3.6.2</version>
+                <version>3.10.1</version>
+                <configuration>
+                    <annotationProcessorPaths>
+                        <!--
+                         Mapstruct has to come before lombok to enable lombok generated field name constants to be used
+                         in Mapstruct annotations. -->
+                        <path>
+                            <groupId>org.mapstruct</groupId>
+                            <artifactId>mapstruct-processor</artifactId>
+                            <version>${mapstruct.version}</version>
+                        </path>
+                        <path>
+                            <groupId>org.projectlombok</groupId>
+                            <artifactId>lombok</artifactId>
+                            <version>${lombok.version}</version>
+                        </path>
+                        <path>
+                            <groupId>org.projectlombok</groupId>
+                            <artifactId>lombok-mapstruct-binding</artifactId>
+                            <version>${lombok-mapstruct-binding.version}</version>
+                        </path>
+                    </annotationProcessorPaths>
+                    <compilerArgs>
+                        <compilerArg>-Amapstruct.defaultComponentModel=spring</compilerArg>
+                        <compilerArg>-Amapstruct.suppressGeneratorTimestamp=true</compilerArg>
+                        <compilerArg>-Amapstruct.suppressGeneratorVersionInfoComment=true</compilerArg>
+                    </compilerArgs>
+                </configuration>
             </plugin>
             <plugin>
                 <groupId>org.apache.maven.plugins</groupId>
@@ -302,7 +345,8 @@
                 <artifactId>maven-surefire-plugin</artifactId>
                 <version>${maven-surefire-plugin.version}</version>
                 <configuration>
-                    <argLine>-Djava.awt.headless=true -Duser.language=en -Duser.country= -Duser.timezone=UTC</argLine>
+                    <argLine>-Djava.awt.headless=true -Duser.language=en -Duser.country= -Duser.timezone=UTC
+                        ${argLine.addOpens}</argLine>
                 </configuration>
             </plugin>
             <plugin>
